[package]
name = "egestorapi_test"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dotenv = "0.15.0"
reqwest = { version = "0.12", features = ["json"] }
serde   = { version = "1.0",  features = ["derive"] }
serde_json = "1.0.140"
tokio   = { version = "1",    features = ["rt-multi-thread", "macros"] }
